specs/016-generics/examples/invalid/explicit-type-arg-mismatch.ts
function identity<T>(x: T): T {
  return x;
}

console.log(identity<int>("hello"));
